# isp-compare

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/migrations/: env.py
backend/migrations/versions/: 1c046fa5a56c_add_indexes.py  1dc96ea3a113_add_test_providers_and_tariffs.py  26a09cade66b_add_user_sessions_for_analytics.py  3dc067da3d85_update_review_model.py  47b565b268ad_add_provider_tariff_and_etc_models.py  494b840c824e_add_analytics.py  5ecf2e568cf7_add_initial_providers.py  67780e890d7c_add_initial_providers.py  6ed04b241432_add_user_sessions_for_analytics.py  a33c9b969062_update_tariff_model.py  a6b0c5c27a02_add_tariffs.py  ac24564c3154_add_cascade_deletion.py  b7b2937cd40e_make_connection_cost_nullable.py  c99b74551be0_create_initial_admin_user.py  d21a093e7d3b_add_is_admin_field_to_user.py  e3f38065dede_add_test_tariffs.py  e86986034d52_add_test_providers_and_tariffs.py  f0114287c0ac_add_phone_to_providers_make_website_and_.py  f584d06c0ef0_initial.py
backend/src/: main.py
backend/src/api/v1/: __init__.py  auth.py  user.py
backend/src/core/: exceptions.py
backend/src/core/di/: main.py
backend/src/isp_compare/: main.py
backend/src/isp_compare/admin/: __init__.py  auth.py  views.py
backend/src/isp_compare/api/: __init__.py
backend/src/isp_compare/core/: config.py  exceptions.py
backend/src/isp_compare/models/: __init__.py  provider.py  review.py  search_history.py  tariff.py  token.py  user.py  user_analytics.py  user_session.py
backend/src/isp_compare/parsers/: base.py  beeline.py  domru.py  rostelecom.py
backend/src/isp_compare/repositories/: provider.py  review.py  search_history.py  tariff.py  token.py  user.py  user_session.py
backend/src/isp_compare/schemas/: analytics.py  common.py  provider.py  review.py  search_history.py  tariff.py  tariff_comparison.py  user.py
backend/src/isp_compare/services/: analytics.py  auth.py  identity_provider.py  parser_service.py  password_hasher.py  provider.py  rate_limiter.py  review.py  search_history.py  tariff.py  tariff_comparison.py  token_processor.py  token_service.py  transaction_manager.py  user.py  user_session.py
backend/src/models/: __init__.py  base.py  token.py  user.py
backend/src/repositories/: token.py  user.py
backend/src/schemas/: user.py
backend/src/services/: auth.py  identity_provider.py  token_processor.py  token_service.py  transaction_manager.py  user.py
backend/tests/: conftest.py  utils.py
backend/tests/fixtures/: auth.py  clients.py  common.py  config.py  db.py  providers.py  reviews.py  search_history.py  tariffs.py  users.py
backend/tests/integration/: provider.py  test_provider.py
backend/tests/integration/admin/: test_admin_auth.py
backend/tests/integration/auth/: test_change_password.py  test_get_profile.py  test_login.py  test_logout.py  test_refresh_token.py  test_register.py  test_update_profile.py
backend/tests/integration/providers/: test_create.py  test_delete.py  test_get.py  test_provider_create.py  test_provider_delete.py  test_provider_get.py  test_provider_list.py  test_provider_update.py  test_update.py
backend/tests/integration/reviews/: test_provider_reviews_list.py  test_review_create.py  test_review_delete.py  test_review_get.py  test_review_update.py
backend/tests/integration/search_history/: test_search_history_clear.py  test_search_history_delete.py  test_search_history_get.py  test_search_history_get_latest.py
backend/tests/integration/tariffs/: test_provider_tariffs_list.py  test_tariff_compare.py  test_tariff_create.py  test_tariff_delete.py  test_tariff_get.py  test_tariff_list.py  test_tariff_search.py  test_tariff_update.py
backend/tests/integration/user/: test_change_password.py  test_get_profile.py  test_update_profile.py
backend/tests/locust_tests/: locustfile.py
backend/tests/unit/: password_hasher.py  test_password_hasher.py  test_rate_limiter.py
backend/tests/unit/repositories/: test_provider_repository.py  test_refresh_token_repository.py  test_review_repository.py  test_search_history_repository.py  test_tariff_repository.py  (+1 more)
docs/: PZ.docx  (+2 more)
(+133 files in other folders)
