[tool.poetry]
name = "isp-compare-backend"
version = "0.1.0"
description = ""
authors = ["Timur Kerimov <tim-online@mail.ru>"]
packages = [{ include = "isp_compare", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.40" }
asyncpg = "^0.30.0"
alembic = "^1.15.2"
dishka = "^1.5.3"
poetry-core = "^2.1.2"
pydantic-settings = "^2.9.1"
redis = "^5.2.1"
python-jose = "^3.4.0"
bcrypt = "^4.3.0"
pydantic = { extras = ["email"], version = "^2.11.3" }



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.6"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"
fakeredis = "^2.28.1"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "RUF001", "RUF002", "RUF003", "RUF012",
    "COM812", "ISC001",
    "D",
    "RET502", "RET503",
    "ANN401", "INP001",
    "FBT001", "FBT002",
    "PLR0913", "PLR0915",
    "TRY003", "EM101", "EM102",
    "S101", "C901", "I001", "PLR2004"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
